# fbi-crime-data-mcp

./: .dockerignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
.serena/: project.yml
.serena/memories/: codebase_structure.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
src/fbi_crime_data_mcp/: api_client.py  response_utils.py  server.py  validators.py
src/fbi_crime_data_mcp/tools/: agency.py  cache.py  employment.py  use_of_force.py
tests/: test_api_client.py  test_validators.py
tests/test_tools/: test_agency.py  test_cache.py  test_employment.py  test_use_of_force.py
