[project]
name = "fbi-crime-data-mcp"
version = "0.3.1"
description = "MCP server for the FBI Crime Data Explorer API"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Joel Natividad" }]
keywords = ["mcp", "fbi", "crime", "data", "ucr", "nibrs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastmcp>=3.2.0",
    "httpx>=0.27.0",
]

[project.scripts]
fbi-crime-data-mcp = "fbi_crime_data_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fbi_crime_data_mcp"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "pytest-cov>=6.0", "respx>=0.22"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["integration: tests that hit the real FBI API (require FBI_API_KEY)"]
